<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp">

    <TableLayout
        android:id="@+id/gamerelation_platform_tablelayout"
        style="@style/Widget.CardContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:padding="5dip"
            android:showDividers="end">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|start"
                android:fontFamily="@font/lato_bold"
                android:text="@string/gamerelation_backlog_status"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/backloggedPlatforms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|start"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:ellipsize="end"
                android:fontFamily="@font/lato"
                android:maxLines="1"
                tools:text="PlayStation 4" />

        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:padding="5dip"
            android:showDividers="end">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|start"
                android:fontFamily="@font/lato_bold"
                android:text="@string/gamerelation_playing_status"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/playingPlatforms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|start"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:ellipsize="end"
                android:fontFamily="@font/lato"
                android:maxLines="1"
                tools:text="Xbox One" />

        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:padding="5dip"
            android:showDividers="end">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|start"
                android:fontFamily="@font/lato_bold"
                android:text="@string/gamerelation_played_status"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/playedPlatforms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|start"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:ellipsize="end"
                android:fontFamily="@font/lato"
                android:maxLines="1"
                tools:text="None" />

        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:padding="5dip"
            android:showDividers="end">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|start"
                android:fontFamily="@font/lato_bold"
                android:text="@string/gamerelation_beaten_status"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/beatenPlatforms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|start"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:ellipsize="end"
                android:fontFamily="@font/lato"
                android:maxLines="1"
                tools:text="None" />

        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:padding="5dip"
            android:showDividers="end">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|start"
                android:fontFamily="@font/lato_bold"
                android:text="@string/gamerelation_completed_status"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/completedPlatforms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|start"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:ellipsize="end"
                android:fontFamily="@font/lato"
                android:maxLines="1"
                tools:text="None" />

        </TableRow>
    </TableLayout>
</android.support.v7.widget.CardView>