<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="game"
            type="com.piticlistudio.playednext.domain.model.Game" />
    </data>

    <android.support.v7.widget.CardView xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">

        <LinearLayout
            style="@style/Widget.CardContent.Vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                style="@style/Widget.CardContent.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/game_detail_info_label_title" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <TableRow
                    android:id="@+id/developer_row"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:padding="5dip"
                    android:showDividers="end">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|start"
                        android:fontFamily="@font/lato_bold"
                        android:text="@string/game_detail_developers_title"
                        android:textStyle="bold"
                        tools:text="Developers" />

                    <TextView
                        android:id="@+id/developer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|start"
                        android:layout_marginStart="8dp"
                        android:layout_weight="1"
                        android:ellipsize="end"
                        android:fontFamily="@font/lato"
                        android:maxLines="2"
                        android:text="@{game.developersName}"
                        tools:text="Piranha Games, Exient Entertainment, EA Black Box, Firebrand Games" />

                </TableRow>

                <TableRow
                    android:id="@+id/publisher_row"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:padding="5dip"
                    android:showDividers="end">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|start"
                        android:fontFamily="@font/lato_bold"
                        android:text="@string/game_detail_publishers_title"
                        android:textStyle="bold"
                        tools:text="Publishers" />

                    <TextView
                        android:id="@+id/publisher"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|start"
                        android:layout_marginStart="8dp"
                        android:ellipsize="end"
                        android:fontFamily="@font/lato"
                        android:maxLines="1"
                        android:text="@{game.publishersName}"
                        tools:text="Electronic Arts" />

                </TableRow>

                <TableRow
                    android:id="@+id/genre_row"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:padding="5dip"
                    android:showDividers="end">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|start"
                        android:fontFamily="@font/lato_bold"
                        android:text="@string/game_detail_genres_title"
                        android:textStyle="bold"
                        tools:text="Genres" />

                    <TextView
                        android:id="@+id/genre"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|start"
                        android:layout_marginStart="8dp"
                        android:ellipsize="end"
                        android:fontFamily="@font/lato"
                        android:maxLines="1"
                        android:text="@{game.genresName}"
                        tools:text="Racing, Arcade" />

                </TableRow>

                <TableRow
                    android:id="@+id/saga_row"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dip"
                    android:showDividers="end">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|start"
                        android:fontFamily="@font/lato_bold"
                        android:text="@string/game_detail_saga_title"
                        android:textStyle="bold"
                        tools:text="Saga" />


                    <TextView
                        android:id="@+id/saga"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginStart="8dp"
                        android:fontFamily="@font/lato"
                        android:maxLines="1"
                        android:textAlignment="center"
                        android:text="@{game.collection.name}"
                        tools:text="Super Mario Bros" />

                </TableRow>

            </TableLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>
</layout>
